objects/M2M__c.object
<CustomObject>
    <description>These are our embedded routers that connect our stations to the internet through cell service. The device is a modem &amp; router.</description>
    <fields>
        <fullName>Activation_Code__c</fullName>
        <label>Activation Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMEI__c</fullName>
        <label>IMEI</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAN_Mac__c</fullName>
        <label>LAN Mac</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_LIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location (LIN)</label>
        <referenceTo>Kiosk__c</referenceTo>
        <relationshipLabel>M2Ms</relationshipLabel>
        <relationshipName>M2Ms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MEID_Dec__c</fullName>
        <label>MEID Dec</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEID_Hex__c</fullName>
        <description>Always starts with &quot;A&quot;</description>
        <inlineHelpText>Always starts with &quot;A&quot;</inlineHelpText>
        <label>MEID Hex</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLink_Portal_Link__c</fullName>
        <formula>HYPERLINK((&quot;https://connect.netsurion.com/#ajax/CXD.html#&quot;)&amp;LAN_Mac__c, LAN_Mac__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Netsurion Portal Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mLink 20x</fullName>
                </value>
                <value>
                    <fullName>CG0192-11897</fullName>
                </value>
                <value>
                    <fullName>ER1000-VZ</fullName>
                </value>
                <value>
                    <fullName>mLink 202VZ</fullName>
                </value>
                <value>
                    <fullName>IBR600C</fullName>
                </value>
                <value>
                    <fullName>IBR600C w/ Dock</fullName>
                </value>
                <value>
                    <fullName>ER2500T-VZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <description>What cell provider is this device currently active on?</description>
        <inlineHelpText>What cell provider is this device currently active on?</inlineHelpText>
        <label>Active Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>T-Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>Purchase Order #</description>
        <inlineHelpText>Purchase Order #</inlineHelpText>
        <label>PO#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aptiWiz</fullName>
                </value>
                <value>
                    <fullName>CloudGate</fullName>
                </value>
                <value>
                    <fullName>Connectedio</fullName>
                </value>
                <value>
                    <fullName>Cradlepoint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Build</label>
        <referenceTo>Production_Build__c</referenceTo>
        <relationshipLabel>M2Ms</relationshipLabel>
        <relationshipName>M2Ms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIM__c</fullName>
        <label>SIM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO__c</fullName>
        <label>SO#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <label>Software</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>v71 - Without Bug Fix</fullName>
                </value>
                <value>
                    <fullName>v75 - Bug Fix</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>v76</fullName>
                </value>
                <value>
                    <fullName>v77</fullName>
                </value>
                <value>
                    <fullName>v78</fullName>
                </value>
                <value>
                    <fullName>6.4.2</fullName>
                </value>
                <value>
                    <fullName>v81</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3G</fullName>
                </value>
                <value>
                    <fullName>4G LTE</fullName>
                </value>
                <value>
                    <fullName>4G LTE w/3G Fallback</fullName>
                </value>
                <value>
                    <fullName>5G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Static_IP__c</fullName>
        <label>Static IP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_SIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Station (SIN)</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>M2Ms</relationshipLabel>
        <relationshipName>M2Ms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Broken</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>M2M</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Station_SIN__c</columns>
        <columns>Speed__c</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>Network__c</columns>
        <columns>Model__c</columns>
        <columns>IMEI__c</columns>
        <columns>MEID_Dec__c</columns>
        <columns>MEID_Hex__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Connectedio</fullName>
        <columns>NAME</columns>
        <columns>Speed__c</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>Network__c</columns>
        <columns>Model__c</columns>
        <columns>IMEI__c</columns>
        <columns>MEID_Dec__c</columns>
        <columns>MEID_Hex__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Connectedio</value>
        </filters>
        <label>All Connectedio</label>
    </listViews>
    <listViews>
        <fullName>All_Verizon</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Speed__c</columns>
        <columns>Product__c</columns>
        <columns>Model__c</columns>
        <columns>Network__c</columns>
        <columns>IMEI__c</columns>
        <columns>MEID_Dec__c</columns>
        <columns>MEID_Hex__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>Verizon</value>
        </filters>
        <label>All Verizon</label>
    </listViews>
    <listViews>
        <fullName>All_mLink</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Speed__c</columns>
        <columns>Product__c</columns>
        <columns>Model__c</columns>
        <columns>Network__c</columns>
        <columns>IMEI__c</columns>
        <columns>MEID_Dec__c</columns>
        <columns>MEID_Hex__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model__c</field>
            <operation>equals</operation>
            <value>mLink 20x,mLink 202VZ</value>
        </filters>
        <label>All mLink</label>
    </listViews>
    <nameField>
        <label>Manufacturer Serial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M2Ms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>